tests/baselines/reference/funClodule.errors.txt
funClodule.ts(2,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
funClodule.ts(9,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
funClodule.ts(15,10): error TS2814: Function with bodies can only merge with classes that are ambient.
funClodule.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
funClodule.ts(19,7): error TS2813: Class declaration cannot implement overload list for 'foo3'.


==== funClodule.ts (5 errors) ====
    declare function foo();
    declare module foo {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function x(): any;
    }
    declare class foo { } // Should error
    
    
    declare class foo2 { }
    declare module foo2 {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function x(): any;
    }
    declare function foo2(); // Should error
    
    
    function foo3() { }
             ~~~~
!!! error TS2814: Function with bodies can only merge with classes that are ambient.
!!! related TS6506 funClodule.ts:19:7: Consider adding a 'declare' modifier to this class.
    module foo3 {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
         export function x(): any { }
    }
    class foo3 { } // Should error
          ~~~~
!!! error TS2813: Class declaration cannot implement overload list for 'foo3'.
!!! related TS6506 funClodule.ts:19:7: Consider adding a 'declare' modifier to this class.